# project3

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
mst/: graph.py
test/: test_mst.py
