[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "Grant Goldman", email = "grant.goldman@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy==1.21.2", "pytest==6.2.5", "scikit-learn==1.0.2"] 
				


